--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "dependencies": {
     "@craco/craco": "^5.7.0",
     "@project-serum/serum": "^0.13.11",
-    "@project-serum/sol-wallet-adapter": "^0.1.1",
+    "@project-serum/sol-wallet-adapter": "git+https://github.com/mathwallet/sol-wallet-adapter.git",
     "@solana/spl-token": "0.0.11",
     "@solana/spl-token-swap": "0.0.2",
     "@solana/web3.js": "^0.86.2",
